--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,42 +25,58 @@
         app:layout_constraintVertical_bias="0.197">
 
 
-        <LinearLayout
-            android:id="@+id/add_layout"
+        <Button
+            android:id="@+id/helpButton"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:gravity="center"
-            android:orientation="horizontal"></LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="helpActivity"
+            android:text="HELP"
+            tools:layout_editor_absoluteX="50dp"
+            tools:layout_editor_absoluteY="318dp" />
 
-        <LinearLayout
-            android:layout_width="336dp"
-            android:layout_height="95dp"
-            android:layout_marginTop="53dp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-            tools:layout_editor_absoluteX="60dp">
+        <Button
+            android:id="@+id/play_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="playActivity"
+            android:text="@string/play"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
-            <Button
-                android:id="@+id/helpButton"
-                android:layout_width="wrap_content"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:onClick="helpActivity"
-                android:text="HELP"
-                tools:layout_editor_absoluteX="50dp"
-                tools:layout_editor_absoluteY="318dp" />
+        <Button
+            android:id="@+id/ch1_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="playActivity"
+            android:text="@string/ch_1"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
-            <Button
-                android:id="@+id/play_button"
-                android:layout_width="wrap_content"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:onClick="playActivity"
-                android:text="@string/play"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
-        </LinearLayout>
+        <Button
+            android:id="@+id/ch2_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="playActivity"
+            android:text="@string/ch_2"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+
+        <Button
+            android:id="@+id/ch3_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="playActivity"
+            android:text="@string/ch_3"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
     </LinearLayout>
 
