--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -20,14 +20,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <ImageView
+            android:id="@+id/imageView8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/plantblink" />
+
         <TextView
             android:id="@+id/playTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
             android:textColor="@android:color/background_dark"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:background="@color/colorPrimaryDark"
             tools:layout_editor_absoluteX="33dp"
             tools:layout_editor_absoluteY="53dp" />
 
@@ -35,10 +42,12 @@
             android:id="@+id/playBody"
             android:layout_width="match_parent"
             android:layout_height="160dp"
+            android:background="@color/colorPrimaryDark"
             android:inputType="textEmailAddress|textMultiLine"
             android:lines="20"
             android:minLines="5"
             android:text="TextView"
+            android:textAllCaps="false"
             android:textSize="18sp"
             tools:layout_editor_absoluteX="25dp"
             tools:layout_editor_absoluteY="93dp" />
